# python_chat

./: .travis.yml  Dockerfile  Makefile  README.md  number_guess.py  pyproject.toml  setup.py
fibonacci/: fib.py
happy_bday/: main.py
number_guess/: number_guess.py  test_number_guess.py
project_euler/: prob_1.py
sieve_of_eratosthenes/: sieve.py  test_sieve.py
sql_demo/: db.py  main.py  score.py  student.py  utils.py
