[tool.poetry]
name = "python_chat"
version = "0.1.0"
description = ""
authors = ["Kevin Yokley <kyokley2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Faker = "^8.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pdbpp = "^0.10.2"
bpython = "^0.19"
mocker = "^1.1.1"
pytest-mock = "^3.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
